Coding Gruntfile.js to distributing project

--- a/demo/src/jquery-autoRefresh/demo/demo.jade
+++ b/demo/src/jquery-autoRefresh/demo/demo.jade
@@ -25,5 +25,5 @@ div.row
                         li.list-group-item(id=item.id)= item.value
 script(type="text/javascript").
     $(function(){
-        $('#autoRefreshForm').autoRefresh('#autoRefreshList', {selector: 'li'});
+        //$('#autoRefreshForm').autoRefresh('#autoRefreshList', {selector: 'li'});
     });
