--- a/demo/index.jade
+++ b/demo/index.jade
@@ -3,25 +3,7 @@ html
     head
         include template/head
     body
-        header.navbar.navbar-default.navbar-fixed-top#navbar
-            div.container
-                nav.navbar-header
-                    a.navbar-brand(href="#") flybyte.cn
-                nav.collapse.navbar-collapse(role="navigation")
-                    ul.nav.navbar-nav
-                        li
-                            a(href="#")
-                                span.glyphicon.glyphicon-book
-                                span &nbsp;BLOG
-                        li.active
-                            a(href="#")
-                                span.glyphicon.glyphicon-tasks
-                                span &nbsp;DOCUMENTION
-                    ul.nav.navbar-nav.navbar-right
-                        li
-                            a(href="#")
-                                span.glyphicon.glyphicon-user
-                                span &nbsp;ABOUT
+        include template/nav
         section.container#content
             mixin panel(item)
                 article.panel.panel-primary
