--- a/demo/template/head.jade
+++ b/demo/template/head.jade
@@ -10,6 +10,7 @@ style.
     #navbar {
         background-color: #428bca;
         border-color: #428bca;
+        box-shadow: 3px 0 3px #ffffff;
     }
     #navbar .navbar-brand {
         font-family: "Monaco";
@@ -25,6 +26,10 @@ style.
     #navbar li.active>a {
         color: #fff;
         background-color: rgba(0,0,0,0.2);
+    }
+    .anchor {
+        position: relative;
+        top: -60px;
     }
 script(type="text/javascript",src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js")
 // build:js sources/js/bootstrap.min.js
