--- a/demo/template/head.jade
+++ b/demo/template/head.jade
@@ -3,6 +3,7 @@ title jQuery plugin Demo
 // build:css sources/css/bootstrap.min.css
 link(rel="stylesheet",type="text/css",href="css/bootstrap.css")
 // endbuild
+link(rel="shortcut icon",href="/favicon.ico",type="image/x-icon")
 style.
     #content {
         margin-top: 60px;
@@ -31,7 +32,9 @@ style.
         position: relative;
         top: -60px;
     }
-script(type="text/javascript",src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js")
+// build:js sources/js/jquery-1.10.2.min.js
+script(type="text/javascript",src="js/jquery-1.10.2.js")
+// endbuild
 // build:js sources/js/bootstrap.min.js
 script(type="text/javascript",src="js/bootstrap.js")
 // endbuild
